Fixed main footer alignments

--- a/src/components/MainComponent/MainFooter/MainFooterStyle.css
+++ b/src/components/MainComponent/MainFooter/MainFooterStyle.css
@@ -2,6 +2,10 @@
     background-color: black;
 }
 
+.ctafooter {
+    color: white;
+}
+
 .smicon {
     width: 50px;
 }
